# infosec-1

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/app/: config.py  db.py  main.py  models.py  schemas.py  security.py
src/app/routers/: auth.py  posts.py
tests/: conftest.py  test_integration.py  test_jwt_auth.py  test_sqli.py  test_xss.py
