[project]
name = "infosec_api"
version = "0.1.0"
description = "Secure REST API lab project built with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Student" }]
dependencies = [
    "fastapi~=0.115.0",
    "uvicorn[standard]~=0.30.6",
    "sqlalchemy~=2.0.34",
    "pydantic[email]~=2.9.1",
    "pydantic-settings~=2.6.0",
    "passlib[bcrypt]~=1.7.4",
    "bcrypt>=4.0.1,<4.1",
    "pyjwt~=2.9.0",
    "python-multipart~=0.0.9",
    "bleach~=6.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.3",
    "httpx~=0.27.2",
    "ruff~=0.7.1",
    "black~=24.8.0",
    "bandit~=1.7.9",
    "safety~=3.2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I", "UP", "S"]
ignore = ["B008"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.bandit]
target = "src"
exclude = ["tests"]
